fix: Make the invite code look good in high contrast mode

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1500,7 +1500,7 @@ button:hover,
 
 @media (forced-colors: active) {
   .invite-code {
-    border: 1px solid ButtonText;
+    border: 1px solid CanvasText;
     background-color: Canvas;
     color: CanvasText;
   }
